feat(api): 알림 응답 senderCompany에 업체 이미지 추가 (#1123)
