# apps/api/src/main/java/to/bconnect/api/core/presentation/v1/response/WithdrawableCompanyResponse.java
@@ -10,15 +10,17 @@ public record WithdrawableCompanyResponse(
         @Schema(requiredMode = Schema.RequiredMode.REQUIRED, nullable = true) Long memberId,
         @Schema(requiredMode = Schema.RequiredMode.REQUIRED, nullable = true) String name,
         @Schema(requiredMode = Schema.RequiredMode.REQUIRED, nullable = true) String brn,
+        @Schema(requiredMode = Schema.RequiredMode.REQUIRED, nullable = true) String picture,
         @Schema(requiredMode = Schema.RequiredMode.REQUIRED, nullable = true) Instant createdAt,
         @Schema(requiredMode = Schema.RequiredMode.REQUIRED, nullable = true) Instant modifiedAt
 ) {
-    public static WithdrawableCompanyResponse of(Company company) {
+    public static WithdrawableCompanyResponse of(Company company, String picture) {
         return new WithdrawableCompanyResponse(
                 company.id(),
                 company.memberId(),
                 company.name(),
                 company.brn(),
+                picture,
                 company.createdAt(),
                 company.modifiedAt()
         );
