# packages/api-client/src/openapi.yaml
@@ -1993,11 +1993,11 @@ components:
     ExceptionCode:
       type: object
       properties:
-        message:
+        code:
           type: string
         status:
           $ref: "#/components/schemas/HttpStatus"
-        code:
+        message:
           type: string
     HttpStatus:
       type: string
@@ -3366,6 +3366,10 @@ components:
           type:
           - string
           - "null"
+        picture:
+          type:
+          - string
+          - "null"
         createdAt:
           type:
           - string
@@ -3383,6 +3387,7 @@ components:
       - memberId
       - modifiedAt
       - name
+      - picture
     WithdrawableMemberResponse:
       type: object
       properties:
